# Java-Inline-LoRA

./: .gitignore  README.md  pyproject.toml
scripts/: convert_dataset.py  filter_with_teacher.py  make_codefix_dataset.py  make_dataset.py  rag_retrieval.py  repoeval_stats.py  run_baseline_chatgpt4j.sh  train_codefix_lora.py  train_lora.py
tests/: test_codefix_dataset.py  test_filter_with_teacher.py
