[project]
name = "java-inline-lora"
version = "0.1.0"
description = "LoRA training + dataset generation for Java inline completion (FIM)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.10.0",
    "transformers==5.0.0",
    "datasets==4.5.0",
    "accelerate==1.12.0",
    "peft==0.18.1",
    "safetensors==0.7.0",
    "tokenizers==0.22.2",
    "tiktoken==0.12.0",
    "sentencepiece==0.2.1",
    "protobuf==6.33.5",
    "numpy==2.4.2",
    "tqdm==4.67.2",
    "matplotlib==3.10.8",
]

[project.optional-dependencies]
qlora = [
    "bitsandbytes==0.49.1; platform_system == 'Linux'",
]

[tool.setuptools]
py-modules = []